# openedit

./: .gitignore  .ralphrc  CONTRIBUTING.md  Cargo.toml  PLUGINS.md  README.md
.github/workflows/: ci.yml  release.yml
.ralph/: .loop_start_sha  PROMPT.md  fix_plan.md  progress.json
.ralph/specs/: architecture.md  features.md
assets/: openedit.desktop
crates/openedit-core/: Cargo.toml
crates/openedit-core/src/: buffer.rs  cursor.rs  diff.rs  document.rs  edit.rs  encoding.rs  folding.rs  lib.rs  line_ending.rs  plugin.rs  plugin_loader.rs  search.rs  selection.rs  syntax.rs  undo.rs
crates/openedit-tools/: Cargo.toml
crates/openedit-tools/src/: case.rs  hash.rs  lib.rs  lines.rs  sort.rs  transform.rs
crates/openedit-ui/: Cargo.toml
crates/openedit-ui/src/: app.rs  autocomplete.rs  bracket_colors.rs  breadcrumb.rs  builtin_plugins.rs  command_palette.rs  config.rs  diff_view.rs  editor_view.rs  find_in_files.rs  function_list.rs  git.rs  go_to_file.rs  go_to_symbol.rs  gutter.rs  hex_view.rs  i18n.rs  lib.rs  lsp.rs  macro_recorder.rs  markdown_preview.rs  mermaid.rs  minimap.rs  plugin_panel.rs  print.rs  search_panel.rs  sidebar.rs  snippets.rs  status_bar.rs  tab_bar.rs  theme.rs  theme_import.rs  updater.rs  vim.rs
crates/openedit-ui/src/terminal/: mod.rs  pty.rs  vt100.rs
packaging/flatpak/: org.openedit.OpenEdit.yml
packaging/wix/: main.wxs
src/: main.rs
