[package]
name = "openedit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core text editing engine for OpenEdit — buffer, cursor, undo, search, syntax"

[dependencies]
ropey.workspace = true
regex.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-c = "0.24"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-md = "0.5"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-lua = "0.4"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-haskell = "0.23"
tree-sitter-scala = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-sequel = "0.3"
memmap2 = { workspace = true }

[dev-dependencies]
