[package]
name = "openedit-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Built-in text transformation tools for OpenEdit"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
base64.workspace = true
percent-encoding.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
digest.workspace = true
