[package]
name = "openedit-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "egui-based UI for OpenEdit"

[dependencies]
openedit-core = { path = "../openedit-core" }
openedit-tools = { path = "../openedit-tools" }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
rfd.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
log.workspace = true
anyhow.workspace = true
notify.workspace = true
regex.workspace = true
walkdir.workspace = true
glob.workspace = true
pulldown-cmark.workspace = true
lsp-types.workspace = true
portable-pty.workspace = true
git2.workspace = true
url.workspace = true
quick-xml.workspace = true
